# Melanobot_v2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Contributing.md  Doxyfile.in  README.md  admin_8cpp.html  admin_8cpp__incl.map  admin_8cpp__incl.md5  admin_8cpp_source.html  admin_8hpp.html  admin_8hpp__dep__incl.map  admin_8hpp__dep__incl.md5  admin_8hpp__incl.map  admin_8hpp__incl.md5  admin_8hpp_source.html  annotated.html  async__service_8cpp.html  async__service_8cpp__incl.map  async__service_8cpp__incl.md5  async__service_8cpp_source.html  async__service_8hpp.html  async__service_8hpp__dep__incl.map  async__service_8hpp__dep__incl.md5  async__service_8hpp__incl.map  async__service_8hpp__incl.md5  async__service_8hpp_source.html  auth__system_8hpp.html  auth__system_8hpp__dep__incl.map  auth__system_8hpp__dep__incl.md5  auth__system_8hpp__incl.map  auth__system_8hpp__incl.md5  auth__system_8hpp_source.html  bridge_8cpp.html  bridge_8cpp__incl.map  bridge_8cpp__incl.md5  bridge_8cpp_source.html  bridge_8hpp.html  bridge_8hpp__dep__incl.map  (+1803 more)
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt  core.cpp
modules/core/handler/: admin.hpp  bridge.cpp  bridge.hpp  connection_monitor.hpp  group.cpp  group.hpp  misc.hpp  simple-group.cpp  simple-group.hpp
modules/file_storage/: CMakeLists.txt  file_storage.cpp  file_storage.hpp  file_storage_module.cpp  storage.cpp  storage.hpp
modules/fun/: CMakeLists.txt  fun-handlers.cpp  fun-handlers.hpp  fun.cpp  markov.hpp  rainbow.cpp  rainbow.hpp
modules/fun/static/: markov.css
modules/github/: CMakeLists.txt  event_source.cpp  event_source.hpp  github-controller.cpp  github-controller.hpp  github-handlers.hpp  github-listeners.hpp  github-source.cpp  github-source.hpp  github.cpp  gitio.hpp  replace-ptree.hpp  repository.cpp  repository.hpp
modules/irc/: CMakeLists.txt  irc.cpp  irc_formatter.cpp  irc_formatter.hpp
modules/irc/handler/: ctcp.hpp  irc_actions.hpp  irc_admin.hpp  irc_whois.hpp
modules/irc/network/: buffer.cpp  buffer.hpp  connection.cpp  connection.hpp  functions.hpp
modules/lists/: CMakeLists.txt  handlers.hpp  lists.cpp
modules/lists/handler/: inventory.hpp  misc.hpp
modules/posix/: CMakeLists.txt  handlers.hpp  posix.cpp  stdin.cpp  stdin.hpp
modules/script/: CMakeLists.txt  boost-python.hpp  handlers.hpp  python-modules.hpp  python-utils.hpp  python.cpp  python.hpp  script.cpp  script_variables.cpp  script_variables.hpp
modules/telegram/: CMakeLists.txt  inline.hpp  telegram-connection.cpp  telegram-connection.hpp  telegram-formatter.hpp  telegram-handlers.hpp  telegram.cpp
modules/timer/: CMakeLists.txt  handlers.cpp  handlers.hpp  timer-connection.hpp  timer-queue.cpp  timer-queue.hpp  timer.cpp
modules/web/: CMakeLists.txt  aliases.hpp  base_pages.hpp  http.cpp  http.hpp  pages.hpp  rest.hpp  server.cpp  server.hpp  web-api-concrete.cpp  web-api-concrete.hpp  web-api.hpp  web.cpp
modules/web/client/: http.cpp  http.hpp
modules/web/handler/: web-api-concrete.cpp  web-api-concrete.hpp  web-api.hpp
modules/web/server/: base_pages.hpp  formatter_html.hpp  pages.cpp  pages.hpp  push_pages.cpp  push_pages.hpp  server.cpp  server.hpp  status_page_impl.hpp  type_system.cpp
modules/web/static/: status.css
modules/xonotic/: CMakeLists.txt  connection_details.hpp  daemon.cpp  daemon.hpp  darkplaces.cpp  darkplaces.hpp  encryption.cpp  encryption.hpp  engine.cpp  engine.hpp  formatter.cpp  formatter.hpp  unvanquished-connection.cpp  unvanquished-connection.hpp  xonotic-connection.cpp  xonotic-connection.hpp  xonotic-formatter.cpp  xonotic-formatter.hpp  xonotic.cpp  xonotic.hpp
modules/xonotic/handler/: log.hpp  rcon.hpp  status.hpp  unvanquished.hpp
src/: CMakeLists.txt  c++-compat.hpp  cache_policy.hpp  color.cpp  color.hpp  concurrency.hpp  concurrent_container.hpp  config.hpp.in  config_factory.cpp  dyn_library.cpp  dyn_library.hpp  error.hpp  functional.hpp  load_module.cpp  load_module.hpp  logger.hpp  main.cpp  math.cpp  math.hpp  maybe_ptr.hpp  melanobot.cpp  melanobot.hpp  melanomodule.hpp  melanomodules.hpp.in  settings.cpp  settings.hpp  storage.cpp  storage.hpp  storage_base.cpp  string.cpp  string.hpp  time.hpp  utils.hpp
src/concurrency/: concurrency.hpp  container.hpp  locked_properties.hpp  locking_reference.hpp  pointer_lock.hpp
src/handler/: admin.cpp  bridge.cpp  bridge.hpp  core.cpp  ctcp.cpp  fun.cpp  handler.cpp  handler.hpp  handler_container.hpp  irc_actions.cpp  irc_whois.cpp  misc.cpp  simple.cpp  web-api.cpp  web-api.hpp
src/handler/irc/: ctcp.cpp  irc_actions.cpp  irc_admin.cpp  irc_whois.cpp
src/melanobot/: cache_policy.hpp  config_factory.cpp  config_factory.hpp  error.hpp  handler.cpp  handler.hpp  melanobot.cpp  melanobot.hpp  storage.cpp  storage.hpp
src/melanolib/: c++-compat.hpp  functional.hpp  library.cpp  library.hpp  math.cpp  math.hpp  singleton.hpp  utils.hpp
src/melanolib/string/: language.cpp  language.hpp  quickstream.hpp  string_view.hpp  stringutils.cpp  stringutils.hpp  trie.hpp
src/message/: input_message.cpp  input_message.hpp  message_consumer.hpp  output_message.hpp
src/module/: load_module.cpp  load_module.hpp  melanomodule.hpp
src/network/: async_service.cpp  async_service.hpp  connection.cpp  connection.hpp  http.cpp  http.hpp  irc.cpp  irc.hpp  irc_buffer.cpp  irc_buffer.hpp  irc_connection.cpp  irc_connection.hpp  irc_functions.hpp  network.hpp  server.hpp  stdin.cpp  time.hpp  udp_io.hpp
src/string/: color.cpp  color.hpp  encoding.cpp  encoding.hpp  format_flags.cpp  format_flags.hpp  formatter.cpp  formatter.hpp  json.hpp  language.cpp  language.hpp  logger.cpp  logger.hpp  multibuf.hpp  quickstream.hpp  replacements.hpp  string.cpp  string.hpp  string_functions.cpp  string_functions.hpp  trie.hpp
src/time/: time.cpp  time.hpp  time_parser.hpp  time_string.cpp  time_string.hpp
src/user/: auth_system.hpp  user.cpp  user.hpp  user_counter.hpp  user_group.cpp  user_group.hpp  user_manager.cpp  user_manager.hpp
test/: CMakeLists.txt  test_formatter.cpp  test_json.cpp  test_string.cpp  test_time.cpp
(+206 files in other folders)
